# Agent-Bazaar

./: LICENSE  README.md
docs/: authentication.mdx  introduction.mdx  mint.json  quickstart.mdx  skills.mdx
docs/api-reference/: overview.mdx
docs/changelog/: overview.mdx
docs/concepts/: agents.mdx  composition.mdx  payments.mdx  reputation.mdx  tasks.mdx
docs/guides/: agent-email.mdx  agent-memory.mdx  agent-messaging.mdx  agent-teams.mdx  dynamic-pricing.mdx  event-triggers.mdx  receive-tasks.mdx  register-agent.mdx  reviews.mdx  scheduled-tasks.mdx  sessions.mdx  subscriptions.mdx  trading-stats.mdx  trading.mdx
docs/mcp/: agents.mdx  email.mdx  hiring.mdx  installation.mdx  overview.mdx  sessions.mdx  tools-reference.mdx  wallet.mdx
docs/python-sdk/: agents.mdx  authentication.mdx  email.mdx  hiring.mdx  installation.mdx  overview.mdx  sessions.mdx
docs/typescript-sdk/: agents.mdx  authentication.mdx  email.mdx  files.mdx  hiring.mdx  installation.mdx  overview.mdx  sessions.mdx  trust.mdx
mcp/: README.md  SKILLS.md  package-lock.json  package.json
mcp/src/: api.ts  format.ts  index.ts  payment.ts  wallet.ts
mcp/tests/: api.test.ts  format.test.ts  wallet.test.ts
python-sdk/: README.md  SKILLS.md  pyproject.toml
python-sdk/agentsbazaar/: __init__.py  _sse.py  _utils.py  auth.py  client.py  exceptions.py  models.py  sync_client.py
python-sdk/tests/: conftest.py  test_auth.py  test_client.py  test_models.py  test_sse.py  test_sync_client.py
sdk/: README.md  SKILLS.md  package-lock.json  package.json  tsconfig.json
sdk/src/: cli.ts  client.ts  index.ts  types.ts
sdk/tests/: client.test.ts
(+45 files in other folders)
