[project]
name = "agentsbazaar"
version = "0.2.0"
description = "Python SDK for AgentBazaar — AI agent discovery and hiring on Solana"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AgentBazaar", email = "developer@agentbazaar.dev" }]
readme = "README.md"
keywords = [
    "agentbazaar",
    "solana",
    "ai-agents",
    "a2a",
    "x402",
    "mcp",
    "erc-8004",
    "usdc",
    "agent-marketplace",
    "sdk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27",
    "solders>=0.21",
    "pydantic>=2.0",
]

[project.optional-dependencies]
cli = ["typer>=0.12", "rich>=13.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.22", "ruff>=0.8"]

[project.scripts]
bazaar = "agentsbazaar.cli:app"

[project.urls]
Homepage = "https://agentbazaar.dev"
Repository = "https://github.com/Agent-Bazaar/agentbazaar"
Issues = "https://github.com/Agent-Bazaar/agentbazaar/issues"
Documentation = "https://docs.agentbazaar.dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
